# compression-algos

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml
docs/: d_08b4cb1648a15a99___init___py.html  d_08b4cb1648a15a99_lempel_ziv_test_py.html  d_145eef247bfb46b6_main_py.html  d_145eef247bfb46b6_test_py.html  d_cb6b606e3893478a_huffman_py.html  d_dc9e86db6f525f69___init___py.html  d_dc9e86db6f525f69_lempel_ziv_py.html  d_dc9e86db6f525f69_sa_py.html  index.html  status.json
documentation/: implementation_doc.md  specification_doc.md  testing_doc.md  user_guide_doc.md
documentation/weekly_reports/: week1.md  week2.md  week3.md  week4.md  week5.md  week6.md  week7.md
htmlcov/: d_08b4cb1648a15a99___init___py.html  d_08b4cb1648a15a99_lempel_ziv_test_py.html  d_145eef247bfb46b6_test_py.html  d_dc9e86db6f525f69___init___py.html  d_dc9e86db6f525f69_lempel_ziv_py.html  d_dc9e86db6f525f69_sa_py.html  index.html  status.json
samples/: The_Count_of_Monte_Cristo_by_Dumas.txt
src/: lempel_ziv.py  main.py  performance_eval.py  performane_evaluator.py  sa.py
src/huffman/: huffman.py
src/lz/: lempel_ziv.py  lempelziv.py  sa.py
src/tests/: huffman_test.py  lempel_ziv_test.py
